--- a/src/app/component/carrito-compra/carrito-compra.component.html
+++ b/src/app/component/carrito-compra/carrito-compra.component.html
@@ -35,32 +35,31 @@
                       </div>
                       <div class="flex flex-1 items-end justify-between text-sm">
 
-                        <div class="flex">
-                          <button (click)="removeItem(item.id)" type="button" class="font-medium text-indigo-600 hover:text-indigo-500">Eliminar</button>
-                        </div>
+                        <div class="mt-4 flex items-end justify-between text-sm">
+                          <button (click)="removeItem(item.id)" type="button" class="font-medium text-customTeal hover:text-custom-blue">Eliminar</button>                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
 
                 <div class="border-t border-gray-200 px-4 py-6 sm:px-6">
-                  <div class="flex justify-between text-base  cart-total font-medium text-gray-900">
-                    <p>Subtotal: {{baseTotal.toFixed(2) | currency:'EUR':true}}</p>
-                    <p>Precio IVA inc.: {{ totalWithTaxes.toFixed(2) | currency:'EUR':true }}</p>
-
-                    <div class="flex justify-between text-base font-medium cart-total">
-
-                    </div>
+                  <div class="flex justify-between text-base font-medium text-gray-900">
+                    <p>Subtotal:</p>
+                    <p>{{baseTotal.toFixed(2) | currency:'EUR':true}}</p>
                   </div>
-                  <p class="mt-0.5 text-sm text-gray-500">Costes de envío calculados al pagar.</p>
+                  <div class="flex justify-between text-base font-medium text-gray-900 mt-2">
+                    <p>Precio IVA inc.:</p>
+                    <p>{{ totalWithTaxes.toFixed(2) | currency:'EUR':true }}</p>
+                  </div>
+                  <p class="mt-2 text-sm text-gray-500">Costes de envío calculados al pagar.</p>
                   <div class="mt-6">
-                    <button (click)="pagarPedido()" class="flex items-center justify-center rounded-md border border-transparent bg-custom-blue px-6 py-3 text-base font-medium text-white shadow-xs hover:bg-yellow-500">Finalizar compra</button>
+                    <button (click)="pagarPedido()" class="flex items-center justify-center rounded-md border border-transparent bg-custom-blue px-6 py-3 text-base font-medium text-white shadow-xs hover:bg-yellow-600 w-full">Finalizar compra</button>
+                    <!-- Botón "Seguir comprando" -->
+                    <br/>
+                    <button (click)="toggleCart()" class="flex items-center justify-center rounded-md border border-gray-300 bg-customGreen px-6 py-3 text-base font-medium text-gray-700 shadow-xs hover:bg-gray-100 w-full">
+                      Seguir comprando
+                    </button>
                   </div>
-                  <div class="mt-6 flex justify-center text-center text-sm text-gray-500">
-                  </div>
-                </div>
-
-
 
               </div>
             </div>
