Mejora de varias páginas para mejor experiencia usuaria.

--- a/src/app/component/Inicio_componentes_propios/hero-section-inicio/hero-section-inicio.component.html
+++ b/src/app/component/Inicio_componentes_propios/hero-section-inicio/hero-section-inicio.component.html
@@ -9,14 +9,14 @@
         ¡Bienvenido a Punto Safa!
       </h1>
 
-      <p class="text-lg text-gray-700 mt-4 leading-relaxed">
+      <p class="text-lg text-gray-700 mt-4 leading-relaxed text-center">
         Te presentamos nuestro espacio literario, en el que encontrarás una amplia selección de libros, desde los clásicos hasta las más recientes historias. <br/> <strong>
         ¡Ven y descubre tu próximo libro favorito!</strong>
       </p>
 
       <button
         (click)="navigateToAboutUs()"
-        class="mt-6 px-6 py-3 bg-blue-900 text-white font-medium rounded-lg hover:bg-gray-400 transition shadow-lg shadow-gray-500"
+        class="mt-6 px-6 py-3 bg-blue-900 text-white font-medium rounded-lg hover:bg-gray-400 transition shadow-lg shadow-gray-500 mx-auto block text-center"
       >
         Sobre nosotros
       </button>
