--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="bg-custom-blue text-white p-4 relative z-10">
+<header  class="header bg-custom-blue text-white p-4 relative z-10">
   <nav class="container mx-auto flex justify-between items-center">
     <!-- Logo -->
     <div class="flex items-center space-x-2">
