--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -10,10 +10,10 @@
 
     <!-- Texto con más espacio -->
     <div class="md:text-left w-full max-w-3xl flex-grow text-justify">
-      <h1 class="text-4xl md:text-5xl font-extrabold text-blue-900 leading-tight">
+      <h1 class="text-4xl md:text-5xl font-extrabold text-blue-900 leading-tight text-center">
         Catálogo
       </h1>
-      <p class="mt-3 text-lg text-gray-800 leading-relaxed">
+      <p class="mt-3 text-lg text-gray-800 leading-relaxed text-center">
         <strong>El universo de los libros te espera...</strong><br/>
         Desde cuentos estelares hasta ciencia fascinante, aquí encontrarás historias para todos los exploradores del conocimiento.
         Embárcate en un viaje a través de páginas llenas de aventuras, misterios y descubrimientos. <br/>
