--- a/src/app/page/perfil-adm/perfil-adm.component.html
+++ b/src/app/page/perfil-adm/perfil-adm.component.html
@@ -5,7 +5,7 @@
     <h2 class="flex-grow text-center text-2xl md:text-4xl font-bold text-[#1F2D3D]">
       ¡ A Trabajar !
     </h2>
-    <h1 class="text-lg font-semibold text-blue-600 mr-10">¡HOLA! {{ userData?.nombre }} a ponerse al Día!</h1>
+    <h1 class="text-lg font-semibold text-custom-blue mr-10">¡HOLA!¡{{ userData?.nombre }}, a ponerse al día!</h1>
 
 
   </header>
@@ -17,14 +17,14 @@
       <div class="flex-shrink-0">
         <img
           [src]="userData?.foto || 'assets/logo_puntosafa.png'"
-          alt="Foto del Cliente"
+          alt="Foto del Administrador"
           class="w-80 h-80 rounded-full object-cover border-4 border-blue-500"
         >
       </div>
 
       <!-- Información del Cliente -->
       <div class="flex-grow bg-gray-50 p-4 rounded-lg shadow-md">
-        <h2 class="text-xl font-semibold text-gray-700 mb-4">Perfil del Cliente</h2>
+        <h2 class="text-xl font-semibold text-gray-700 mb-4">Administrador</h2>
 
         <!-- Mensajes de éxito y error -->
         <p *ngIf="successMessage" class="text-green-600 mt-2 p-3 bg-green-100 border border-green-600 rounded">
