--- a/src/app/page/perfil-adm/perfil-adm.component.html
+++ b/src/app/page/perfil-adm/perfil-adm.component.html
@@ -94,7 +94,7 @@
       <h2 class="text-lg font-semibold text-gray-700 mb-2">Estado de Clientes</h2>
 
 
-      <div class="overflow-x-auto">
+      <div class="overflow-x-auto px-4 sm:px-6 lg:px-8">
         <table class="w-full border-collapse border border-gray-200 rounded-lg shadow-md">
           <thead class="bg-gray-200">
           <tr>
@@ -102,22 +102,36 @@
             <th class="border p-2">Dirección de Entrega</th>
             <th class="border p-2">Cliente</th>
             <th class="border p-2">Fecha</th>
+            <th class="border p-2">Actualizar pedido</th>
           </tr>
           </thead>
           <tbody>
           <tr *ngFor="let pedido of pedidos" class="odd:bg-white even:bg-gray-100 hover:bg-gray-200">
-            <td class="border p-2">{{ pedido.estado }}</td>
+            <td class="border p-2" [ngClass]="{
+      'text-yellow-600': pedido.estado === 'enviado',
+      'text-red-600': pedido.estado === 'procesado'
+    }">{{ pedido.estado }}</td>
             <td class="border p-2">{{ pedido.direccion_entrega }}</td>
             <td class="px-4 py-2">
               <ng-container *ngIf="isCliente(pedido.cliente)">
                 {{ pedido.cliente.nombre }} {{ pedido.cliente.apellidos }} <!-- Client Name -->
               </ng-container>
             </td>
-            <td class="border p-2">{{ pedido.fecha | date:'yyyy-MM-dd HH:mm' }}</td>
+            <td class="border p-2">{{ pedido.fecha | date:'dd/MM/yyyy HH:mm:ss' }}</td>
             <td class="px-4 py-2">
-              <!-- Dropdown or button to update the estado -->
-              <button (click)="updatePedidoEstado(pedido.id, 'enviado')">Mark as Enviado</button>
-              <button (click)="updatePedidoEstado(pedido.id, 'entregado')">Mark as Entregado</button>
+              <div class="flex flex-wrap justify-center gap-4">
+                <button
+                  (click)="updatePedidoEstado(pedido.id, 'enviado')"
+                  [disabled]="pedido.estado === 'enviado'"
+                  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded disabled:bg-gray-400 disabled:cursor-not-allowed">
+                  Enviado
+                </button>
+                <button
+                  (click)="updatePedidoEstado(pedido.id, 'entregado')"
+                  class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
+                  Entregado
+                </button>
+              </div>
             </td>
           </tr>
           </tbody>
