--- a/src/app/page/pagar-compra/pagar-compra.component.html
+++ b/src/app/page/pagar-compra/pagar-compra.component.html
@@ -143,20 +143,28 @@
 </div>
 
 <!-- Modal -->
-<div *ngIf="showModal" class="fixed inset-0 flex items-center justify-center bg-gray-600 bg-opacity-50 z-50">
-  <div class="bg-white rounded-lg p-6 max-w-sm w-full">
-    <div class="flex justify-between items-center">
-      <h2 class="text-xl font-semibold"></h2>
-      <button (click)="closeModal()" class="text-gray-500">&times;</button>
-    </div>
-    <p class="mt-4 text-gray-700">{{ modalMessage }}</p>
-    <div class="mt-6 flex justify-end">
-      <button (click)="closeModal()" class="px-4 py-2 bg-blue-500 text-white rounded-lg">
-        Close
-      </button>
+  <div *ngIf="showModal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-40 backdrop-blur-md z-50">
+    <div class="bg-white rounded-2xl shadow-xl p-8 max-w-md w-full transform transition-all duration-300 ease-in-out scale-95 opacity-0"
+         [ngClass]="{'scale-100 opacity-100': showModal}">
+      <div class="flex justify-between items-center border-b pb-4">
+        <h2 class="text-2xl font-bold text-gray-800">Mensaje Importante</h2>
+        <button (click)="closeModal()" class="text-gray-500 hover:text-red-500 transition-all duration-200">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
+          </svg>
+        </button>
+      </div>
+      <p class="mt-5 text-gray-600 text-lg leading-relaxed">{{ modalMessage }}</p>
+      <div class="mt-6 flex justify-end">
+        <button (click)="closeModal()" class="px-5 py-2 bg-custom-blue text-white rounded-lg hover:bg-gray-400 transition-all duration-200 shadow-md">
+          Cerrar
+        </button>
+      </div>
     </div>
   </div>
-</div>
+
+
+
 </section>
 
 
