--- a/src/app/libro-edicion/registro-libro/registro-libro.component.html
+++ b/src/app/libro-edicion/registro-libro/registro-libro.component.html
@@ -15,7 +15,7 @@
 
       <!-- Formulario para Crear -->
       <div class="md:w-2/3 w-full">
-          <form [formGroup]="libroForm" (ngSubmit)="guardarLibro()">
+          <form [formGroup]="libroForm">
           <!-- Título -->
           <div>
             <label for="titulo" class="block text-sm font-medium text-gray-700">Título</label>
@@ -113,28 +113,32 @@
           </div>
 
             <!-- Autor -->
-
             <div>
               <label for="autorId" class="block text-sm font-medium text-gray-700">ID del Autor</label>
-              <input type="text" id="autorId" formControlName="autor" class="mt-1 block w-full border border-gray-300 rounded-md p-3" placeholder="Ingrese el ID del autor">
+              <input type="number" id="autorId" formControlName="autor"
+                     class="mt-1 block w-full border border-gray-300 rounded-md p-3"
+                     placeholder="Ingrese el ID del autor">
               <div *ngIf="libroForm.get('autor')?.invalid && libroForm.get('autor')?.touched" class="text-red-600 text-sm">
                 El autor es obligatorio.
               </div>
-
             </div>
 
             <!-- Categoría -->
             <div>
               <label for="categoriaId" class="block text-sm font-medium text-gray-700">ID de la Categoría</label>
-              <input type="text" id="categoriaId" formControlName="categoria" class="mt-1 block w-full border border-gray-300 rounded-md p-3" placeholder="Ingrese el ID de la categoría">
+              <input type="number" id="categoriaId" formControlName="categoria"
+                     class="mt-1 block w-full border border-gray-300 rounded-md p-3"
+                     placeholder="Ingrese el ID de la categoría">
               <div *ngIf="libroForm.get('categoria')?.invalid && libroForm.get('categoria')?.touched" class="text-red-600 text-sm">
                 La categoría es obligatoria.
               </div>
             </div>
 
-          <!-- Botón Guardar -->
+
+            <!-- Botón Guardar -->
           <div class="mt-6">
             <button type="submit"
+                    (click)="guardarLibro()"
                     class="w-full bg-green-500 text-white py-3 rounded-lg font-semibold text-lg shadow-md hover:bg-green-600 transition duration-300">
               Guardar
             </button>
