--- a/src/app/page/detalle-de-libro/detalle-de-libro.component.html
+++ b/src/app/page/detalle-de-libro/detalle-de-libro.component.html
@@ -1,17 +1,23 @@
 <section class="min-h-[calc(100vh-8rem)] py-16 px-4 sm:px-6 lg:px-8 relative" style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.4)), url('../../../../assets/puntosafa_fondo3.jpeg'); background-size: cover; background-position: center;">
 
-  <div class="bg-customGreen py-4 shadow-gray-500 shadow-sm">
+  <div class="bg-customGreen py-6 shadow-gray-500 shadow-sm">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
-    <div class="container mx-auto flex flex-col md:flex-row items-center px-6 lg:px-8 justify-between">
+    <div class="container mx-auto flex flex-col md:flex-row items-center px-6 lg:px-8 gap-6 md:gap-10">
       <div class="mt-6 md:mt-0">
         <img src="../../../../assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-40 md:w-48 mx-auto">
       </div>
 
-      <div class="text-center md:text-left max-w-xl mx-auto">
-        <h1 class="text-4xl font-extrabold text-blue-900 leading-tight">
-          Información de libro
+      <!-- Información del libro -->
+      <div class="text-center md:text-left w-full max-w-3xl flex-grow">
+        <h1 class="text-4xl md:text-5xl font-extrabold text-blue-900 leading-tight">
+          Información del libro
         </h1>
+        <p class="mt-3 text-lg text-gray-800 leading-relaxed">
+          Explora los detalles de esta increíble obra. Conoce su autor, sinopsis, género y más información relevante antes de agregarlo a tu colección.
+          <br/> <strong> Descubre por qué este libro es una lectura imprescindible.</strong>
+        </p>
+
       </div>
     </div>
   </div>
@@ -54,15 +60,16 @@
         <span class="text-2xl font-bold text-gray-900">{{ libro?.precio | currency: '€' }}</span>
       </div>
 
-      <div class="mt-6 flex items-center gap-x-2">
-        <button (click)="decreaseQuantity()" class="bg-customGreen text-gray-700 px-3 py-1 rounded-md hover:bg-gray-300">-</button>
-        <input id="cantidad" type="number" [(ngModel)]="quantity" class="w-16 text-center border border-gray-300 rounded-md">
-        <button (click)="increaseQuantity()" class="bg-customAzulito text-gray-700 px-3 py-1 rounded-md hover:bg-gray-300">+</button>
-      </div>
 
-      <button (click)="addToCart()" class="w-full mt-6 bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 transition duration-300">
+
+      <button
+        (click)="addToCart(libro)"
+        [disabled]="!libro || quantity < 1"
+        class="w-full mt-6 bg-yellow-600 text-white py-3 rounded-lg hover:bg-gray-400 transition duration-300"
+      >
         Agregar al carrito
       </button>
+
     </div>
   </div>
 
@@ -116,7 +123,7 @@
       <!-- Botón de enviar -->
       <button
         type="submit"
-        class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 transition duration-300"
+        class="w-full bg-custom-blue text-white py-2 rounded-lg hover:bg-gray-400 transition duration-300"
       >
         Enviar reseña
       </button>
